--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,6 +4,6 @@ main: me.firedragon5.clashcraft.ClashCraft
 api-version: '1.20'
 
 commands:
-  clans:
+  clan:
     aliases: [clan, c]
     description: Clan commands
