--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,7 @@
             <groupId>com.github.FireDragon5</groupId>
             <artifactId>FireApi</artifactId>
             <version>v1.3.3</version>
+            <scope>compile</scope>
         </dependency>
 
     </dependencies>
