--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,9 +1,9 @@
-name: ClashCraft
+name: islanddefender
 version: '${project.version}'
-main: me.firedragon5.clashcraft.ClashCraft
+main: me.firedragon5.islanddefender.islanddefender
 api-version: '1.20'
 
 commands:
   clan:
-    aliases: [clan, c]
+    aliases: [ clan, c ]
     description: Clan commands
