--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <version>1.0</version>
     <packaging>jar</packaging>
 
-    <name>islanddefender</name>
+    <name>IslandDefender</name>
 
     <properties>
         <java.version>17</java.version>
