--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
-name: islanddefender
+name: IslandDefender
 version: '${project.version}'
-main: me.firedragon5.islanddefender.islanddefender
+main: me.firedragon5.islanddefender.IslandDefender
 api-version: '1.20'
 
 commands:
