--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,6 +3,8 @@ version: '${project.version}'
 main: me.firedragon5.islanddefender.IslandDefender
 api-version: '1.20'
 
+depend:
+  - LuckPerms
 
 permissions:
   islanddefender.mines:
