--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,8 +3,7 @@ version: '${project.version}'
 main: me.firedragon5.islanddefender.IslandDefender
 api-version: '1.20'
 
-depend:
-  - LuckPerms
+depend: [LuckPerms, WorldEdit]
 
 permissions:
   islanddefender.mines:
